SonarLint & refactoring